syntax = "proto3";

package lcmi.api.machine_lifecycle.v1alpha1;

import "lcmi/api/common/v1alpha1/api.proto";
import "lcmi/api/meta/v1alpha1/api.proto";

option go_package = "github.com/ironcore-dev/lifecycle-manager/lcmi/api/machine_lifecycle/v1alpha1";

message MachineLifecycle {
  meta.v1alpha1.ObjectMetadata metadata = 1;
  MachineLifecycleSpec spec = 2;
  MachineLifecycleStatus status = 3;
}

message MachineLifecycleSpec {
  meta.v1alpha1.LocalObjectReference machine_type_ref = 1;
  meta.v1alpha1.LocalObjectReference oob_machine_ref = 2;
  int64 scan_period = 3;
}

message MachineLifecycleStatus {
  int64 last_scan_time = 1;
  common.v1alpha1.ScanResult last_scan_result = 2;
  repeated meta.v1alpha1.LocalObjectReference installed_packages = 3;
}

message MachineLifecycleFilter {
  string id = 1;
  map<string, string> label_selector = 2;
}

message ListMachineLifecyclesRequest {
  MachineLifecycleFilter filter = 1;
}

message ListMachineLifecyclesResponse {
  repeated MachineLifecycle machine_lifecycle = 1;
}

message StatusRequest {
  string id = 1;
}

message StatusResponse {
  MachineLifecycleStatus status = 1;
}

message ScanRequest {
  string id = 1;
}

message ScanResponse {
  MachineLifecycleStatus status = 1;
  common.v1alpha1.ScanState state = 2;
}

service MachineLifecycleBrokerService {
  rpc ListMachineLifecycles(ListMachineLifecyclesRequest) returns (ListMachineLifecyclesResponse) {}
  rpc Scan(ScanRequest) returns (ScanResponse) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
}
